--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">Study Buddy</string>
 
-    <string name="facebook_app_id">1234</string>
+    <string name="facebook_app_id">812723926840772</string>
     <string name="fb_login_protocol_scheme">fb1234</string>
-    <string name="facebook_client_token">56789</string>
-
+    <string name="facebook_client_token">8f59a8e6e413e4988e0625bbe7ba2bdd</string>
     <string name="server_base_url">192.168.1.230</string>
 </resources>
